# algorithms

./: .gitmodules  CMakeLists.txt
add-binary-integers/: main.c
helper/: helper.h
insertion-sort/: main.c
insertion-sort-decreasing/: main.c
insertion-sort-descending/: main.c
insertion-sort-sdl/: main.c
linear-search/: main.c
merge-sort/: main.c
selection-sort/: main.c
sum-array/: main.c
